--- a/templates/home.html
+++ b/templates/home.html
@@ -1,32 +1,38 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Home</title>
-    <link rel="icon" type="image/x-icon" href="./static/favicon.ico">
-    <!-- <link rel="stylesheet" href="./static/home.css"> -->
-  </head>
-  <body>
-    <div>
-      
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Home</title>
+  <link rel="icon" type="image/x-icon" href="./static/favicon.ico">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+  <link rel="stylesheet" href="./static/home.css">
+</head>
+<body>
+  <div class='container'>
     
-    <h1>U.R. Cristiano Careers</h1>
-    <img src="./static/banner.jpg">
-    <h2> About CR7</h2>
+  
+  <h1 class="text-center mt-4 mb-4">U.R. Cristiano Careers</h1>
+  <img class='img-fluid'  id='banner' src="./static/banner.jpg">
+  <h2 class="text-center mt-4 mb-4"> About CR7</h2>
+  <p class='lead'>
+    Cristiano Ronaldo dos Santos Aveiro GOIH ComM  born 5 February 1985) is a Portuguese professional footballer who plays as a forward for and captains both Saudi Pro League club Al Nassr and the Portugal national team. Widely regarded as one of the greatest players of all time, Ronaldo has won five Ballon d'Or awards,[note 3] a record three UEFA Men's Player of the Year Awards, and four European Golden Shoes, the most by a European player. He has won 33 trophies in his career, including seven league titles, five UEFA Champions Leagues, the UEFA European Championship and the UEFA Nations League. Ronaldo holds the records for most appearances (183), goals (140) and assists (42) in the Champions League, most appearances (30), assists (8), goals in the European Championship (14), international goals (130) and international appearances (212). He is one of the few players to have made over 1,200 professional career appearances, the most by an outfield player, and has scored over 890 official senior career goals for club and country, making him the top goalscorer of all time.
+  </p>
+  <h2 class="text-center mt-4 mb-4">Open Position</h2>
     <p>
-      Cristiano Ronaldo dos Santos Aveiro GOIH ComM  born 5 February 1985) is a Portuguese professional footballer who plays as a forward for and captains both Saudi Pro League club Al Nassr and the Portugal national team. Widely regarded as one of the greatest players of all time, Ronaldo has won five Ballon d'Or awards,[note 3] a record three UEFA Men's Player of the Year Awards, and four European Golden Shoes, the most by a European player. He has won 33 trophies in his career, including seven league titles, five UEFA Champions Leagues, the UEFA European Championship and the UEFA Nations League. Ronaldo holds the records for most appearances (183), goals (140) and assists (42) in the Champions League, most appearances (30), assists (8), goals in the European Championship (14), international goals (130) and international appearances (212). He is one of the few players to have made over 1,200 professional career appearances, the most by an outfield player, and has scored over 890 official senior career goals for club and country, making him the top goalscorer of all time.
-    </p>
-    <h2>Open Position</h2>
-    <p>
-      time to do
-    </p>
-      <div>
-        <button>Contact Us</button>
-        <p>@Copyrights to Gopinath</p>
-      </div> 
+      {% for Job in jobs%}
+        {% include 'joblist.html' %}
+      {% endfor %}
       
-    </div>
-  </body>
+    </p>
+  
+  <div class='text-center'>
+      <button class='btn btn-primary btn-lg'>Contact Us</button>
+      <p class='mt-4'>@Copyrights to Gopinath</p>
+    </div> 
+    
+  </div>
+</body>
 </html>
