added dynamic data and Api route

--- a/templates/home.html
+++ b/templates/home.html
@@ -14,7 +14,7 @@
   <div class='container'>
     
   
-  <h1 class="text-center mt-4 mb-4">U.R. Cristiano Careers</h1>
+  <h1 class="text-center mt-4 mb-4">{{Company_name}} Careers</h1>
   <img class='img-fluid'  id='banner' src="./static/banner.jpg">
   <h2 class="text-center mt-4 mb-4"> About CR7</h2>
   <p class='lead'>
