--- a/templates/joblist.html
+++ b/templates/joblist.html
@@ -1,4 +1,6 @@
-<div style='margin-bottom:16px;'>
+<div class='border-bottom row' style='margin-bottom:16px; padding-bottom:8px;'>
+  <div class='col-10'>
+    
   <h4 style='color:rgb(120,120,120); margin-bottom:4px;'>           {{Job['title']}}
   </h4> 
   <div>Location :<b>{{Job['location']}}</b></div>
@@ -6,5 +8,8 @@
     <div>Salary :<b>{{Job['salary']}}</b></div>
   {% else %}
     <div>Salary :<b>Not Disclosed</b></div>
-  {% endif %}
+  {% endif %}</div>
+  <div class='col-2'>
+    <button type="button" class="btn btn-outline-primary">Apply</button>
+  </div>
 </div>
